Remove the dummy layout request off an event, not synchronously, so we don't fire onload as we're finishing up reflow.  Bug 281157, r+sr=roc